# KMN-Space

./: CMakeLists.txt  README.md  ROADMAP.md  homescreen.cpp  homescreen.ui  settings.ui
app/: main.cpp
data/: reminders.json  schedule.json  tasks.json
include/: home.h  homescreen.h  note.h  noteGestor.h  notes.h  notesEditor.h  pdfGestor.h  reminder.h  reminderGestor.h  schedule.h  settings.h  task.h  taskGestor.h  user.h
resources/: resources.qrc
src/: homescreen.cc  note.cc  noteGestor.cc  notes.cc  notesEditor.cc  pdfGestor.cc  reminder.cc  reminderGestor.cc  schedule.cc  settings.cc  task.cc  taskGestor.cc  user.cc
ui/: homescreen.ui  notes.ui  noteseditor.ui  schedule.ui
